--- a/styles/styles.css
+++ b/styles/styles.css
@@ -62,3 +62,18 @@ body {
   text-transform: uppercase;
   color: inherit;
 }
+
+.main-index {
+  background-image: url("../images/index-background.jpg");
+  background-size: 100% auto;
+  background-repeat: no-repeat;
+}
+
+.main-title {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 36px;
+  text-align: center;
+  text-transform: uppercase;
+}
