--- a/styles/styles.css
+++ b/styles/styles.css
@@ -77,3 +77,12 @@ body {
   text-align: center;
   text-transform: uppercase;
 }
+
+p {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 26px;
+  font-style: regular;
+  text-align: center;
+}
