--- a/styles/styles.css
+++ b/styles/styles.css
@@ -43,6 +43,7 @@ body {
   font-family: "PT Sans", sans-serif;
   font-size: 18px;
   line-height: 21px;
+  font-weight: 400;
   background-color: #FFFFFF;
   color: #000000;
 }
@@ -77,4 +78,11 @@ body {
   background-size: 100% auto;
   border-radius: 0px;
   background-repeat: no-repeat;
+}
+
+.product-card-title {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28px;
 }
