--- a/styles/styles.css
+++ b/styles/styles.css
@@ -131,3 +131,10 @@ body {
   border: 2px solid #E5E5E5;
   border-radius: 4px;
 }
+
+.page-footer {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 40px;
+}
