--- a/styles/styles.css
+++ b/styles/styles.css
@@ -74,6 +74,20 @@ body {
   text-align: center;
 }
 
+.interest {
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 36px;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.best {
+  font-size: 22px;
+  line-height: 26px;
+  text-align: center;
+}
+
 .appointment {
   background-image: url("../images/subscribe-background.jpg");
   background-size: 100% auto;
