--- a/styles/styles.css
+++ b/styles/styles.css
@@ -95,6 +95,22 @@ body {
   background-repeat: no-repeat;
 }
 
+.appointment-title {
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 36px;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  text-align: center;
+}
+
+.appointment-paragraph {
+  font-size: 22px;
+  line-height: 26px;
+  color: #FFFFFF;
+  text-align: center;
+}
+
 .inner-header-title {
   font-size: 20px;
   line-height: 26px;
