--- a/styles/styles.css
+++ b/styles/styles.css
@@ -183,6 +183,21 @@ body {
   border-radius: 4px;
 }
 
+.appointment-catalog-title {
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 36px;
+  text-transform: uppercase;
+  text-align: center;
+
+}
+
+.appointment-catalog-paragraph {
+  font-size: 22px;
+  line-height: 26px;
+  text-align: center;
+}
+
 .page-footer {
   font-style: normal;
   font-weight: 400;
