--- a/styles/styles.css
+++ b/styles/styles.css
@@ -183,6 +183,10 @@ body {
   border-radius: 4px;
 }
 
+.appointment-catalog {
+  height: 417px;
+}
+
 .appointment-catalog-title {
   font-weight: 700;
   font-size: 30px;
