задает дефолтный шрифт Arial

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -40,7 +40,7 @@
 }
 
 body {
-  font-family: "PT Sans", sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
   font-size: 18px;
   line-height: 21px;
   font-weight: 400;
