--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,6 +17,7 @@
 
 body {
   font-family: "PT Sans", "Arial", sans-serif;
+  font-style: normal;
   font-size: 18px;
   line-height: 21px;
   font-weight: 400;
