--- a/styles/styles.css
+++ b/styles/styles.css
@@ -51,6 +51,25 @@ body {
   text-align: center;
 }
 
+.advantages-list {
+  background: rgba(131, 179, 211, 0.12);
+}
+.advantages-item-1 {
+  background: #82B3D3;
+}
+
+.advantages-item-3 {
+  background: #FFFFFF;
+}
+
+.advantages-item-5 {
+  background: #82B3D3;
+}
+
+.advantages-item-7 {
+  background: rgba(131, 179, 211, 0.2);
+}
+
 .interest {
   font-weight: 700;
   font-size: 30px;
