--- a/styles/styles.css
+++ b/styles/styles.css
@@ -51,23 +51,34 @@ body {
   text-align: center;
 }
 
-.advantages-list {
-  background: rgba(131, 179, 211, 0.12);
-}
 .advantages-item-1 {
   background: #82B3D3;
+  color: #FFFFFF;
 }
 
-.advantages-item-3 {
-  background: #FFFFFF;
+.advantages-item-2 {
+  background: rgba(131, 179, 211, 0.12);
+}
+
+.advantages-item-4 {
+  background: rgba(131, 179, 211, 0.12);
 }
 
 .advantages-item-5 {
   background: #82B3D3;
+  color: #FFFFFF;
+}
+
+.advantages-item-6 {
+  background: rgba(131, 179, 211, 0.12);
 }
 
 .advantages-item-7 {
   background: rgba(131, 179, 211, 0.2);
+}
+
+.advantages-item-8 {
+  background: rgba(131, 179, 211, 0.12);
 }
 
 .interest {
