--- a/styles/styles.css
+++ b/styles/styles.css
@@ -81,6 +81,46 @@ body {
   background: rgba(131, 179, 211, 0.12);
 }
 
+.advantages-item-city {
+  font-weight: 700;
+  font-size: 24px;
+}
+
+.advantages-item-home {
+  font-weight: 700;
+  font-size: 24px;
+}
+
+.advantages-item-meal {
+  font-weight: 700;
+  font-size: 24px;
+}
+
+.advantages-item-souvenirs {
+  font-weight: 700;
+  font-size: 24px;
+}
+
+.advantages-item-bridge {
+  font-weight: 700;
+  font-size: 24px;
+}
+
+.advantages-item-space {
+  font-weight: 700;
+  font-size: 24px;
+}
+
+.advantages-item-road {
+  font-weight: 700;
+  font-size: 24px;
+}
+
+.advantages-item-rew {
+  font-weight: 700;
+  font-size: 24px;
+}
+
 .interest {
   font-weight: 700;
   font-size: 30px;
