--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,7 +15,15 @@
   font-display: swap;
 }
 
+html {
+  height: 100%;
+}
+
 body {
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
   font-family: "PT Sans", "Arial", sans-serif;
   font-style: normal;
   font-size: 18px;
@@ -29,6 +37,10 @@ body {
   font-size: 20px;
   line-height: 26px;
   text-transform: uppercase;
+}
+
+.main-container {
+  flex-grow: 1;
 }
 
 .main-index {
