--- a/styles/styles.css
+++ b/styles/styles.css
@@ -49,6 +49,11 @@ body {
   background-repeat: no-repeat;
 }
 
+.page-container {
+  width: 1200px;
+  margin: 0 auto;
+}
+
 .main-title {
   font-weight: 700;
   font-size: 30px;
@@ -69,9 +74,21 @@ body {
   margin: 0 auto;
 }
 
+.page-logo {
+  width: 139px;
+  padding-right: 47px;
+  margin-left: 70px;
+}
+
 .navigation-list {
+  width: 340px;
   margin: 0;
-  padding: 0;
+  padding-right: 312px;
+}
+
+.navigation-user {
+  width: 220px;
+  margin-left: auto;
 }
 
 .advantages-item-1 {
