--- a/styles/styles.css
+++ b/styles/styles.css
@@ -53,6 +53,11 @@ body {
   margin: 0 auto;
 }
 
+.logo {
+  display: block;
+  margin: 0 auto;
+}
+
 .main-title {
   font-weight: 700;
   font-size: 30px;
