--- a/styles/styles.css
+++ b/styles/styles.css
@@ -32,6 +32,11 @@ body {
   color: #000000;
 }
 
+.container {
+  margin: 0 auto;
+  width: 1200px;
+}
+
 .page-header {
   font-size: 20px;
   line-height: 26px;
@@ -49,7 +54,10 @@ body {
 }
 
 .page-container {
-  width: 1200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 0 auto;
   margin: 0 auto;
 }
 
@@ -95,34 +103,86 @@ body {
   margin-left: auto;
 }
 
-.advantages-item-1 {
+.advantages-list {
+  margin: 0;
+  padding: 0;
+
+}
+
+.advantages-item-1  {
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+  padding: 0;
   background: #82B3D3;
   color: #FFFFFF;
+  height: 384px;
+}
+
+.advantages-items {
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  width: 1200px;
 }
 
 .advantages-item-2 {
   background: rgba(131, 179, 211, 0.12);
+  width: 400px;
+  height: 384px;
+  text-align: center;
+}
+
+.advantages-item-3 {
+  width: 400px;
+  height: 384px;
+  text-align: center;
 }
 
 .advantages-item-4 {
   background: rgba(131, 179, 211, 0.12);
+  width: 400px;
+  height: 384px;
+  text-align: center;
 }
 
 .advantages-item-5 {
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+  padding: 0;
+  text-align: center;
   background: #82B3D3;
   color: #FFFFFF;
+  height: 384px;
+}
+
+.advantages-features {
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+  padding: 0;
+  text-align: center;
 }
 
 .advantages-item-6 {
   background: rgba(131, 179, 211, 0.12);
+  width: 400px;
+  height: 384px;
 }
 
 .advantages-item-7 {
   background: rgba(131, 179, 211, 0.2);
+  width: 400px;
+  height: 384px;
 }
 
 .advantages-item-8 {
   background: rgba(131, 179, 211, 0.12);
+  width: 400px;
+  height: 384px;
 }
 
 .advantages-item-city {
