--- a/styles/styles.css
+++ b/styles/styles.css
@@ -109,11 +109,12 @@ body {
 
 }
 
-.advantages-item-1  {
+.advantages-item-1 {
   display: flex;
   justify-content: space-between;
   margin: 0;
   padding: 0;
+  text-align: center;
   background: #82B3D3;
   color: #FFFFFF;
   height: 384px;
