--- a/styles/styles.css
+++ b/styles/styles.css
@@ -359,3 +359,9 @@ body {
   font-size: 40px;
   line-height: 40px;
 }
+
+.page-footer-container {
+  display: flex;
+  width: 1200px;
+  margin: 0 auto;
+}
