--- a/styles/styles.css
+++ b/styles/styles.css
@@ -365,3 +365,18 @@ body {
   width: 1200px;
   margin: 0 auto;
 }
+
+.footer-socials {
+  width: 170px;
+  margin-right: 250px;
+}
+
+.footer-contact {
+  width: 331px;
+  margin-right: 236px;
+}
+
+.logo-html {
+  margin-left: 72px;
+  max-width: 115px;
+}
