добавляет свойство flex для фильтров

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -380,3 +380,11 @@ body {
   margin-left: 72px;
   max-width: 115px;
 }
+
+.catalog-products {
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
