--- a/styles/styles.css
+++ b/styles/styles.css
@@ -286,6 +286,8 @@ body {
   background-size: 100% auto;
   border-radius: 0px;
   background-repeat: no-repeat;
+  width: 1200px;
+  height: 403px;
 }
 
 .select-control {
