добавляет флекс для фильтров и карточек гостиниц

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -418,3 +418,17 @@ body {
   padding: 0;
 }
 
+.filter-menu {
+  display: flex;
+}
+
+.product-list {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+
+
