задает размеры для карточек каталога

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -430,5 +430,31 @@ body {
   flex-wrap: wrap;
 }
 
+.product-card-amara {
+  margin: 0;
+  padding: 0;
+  height: 438px;
+  width: 340px;
+}
 
+.product-card-villas {
+  margin: 0;
+  padding: 0;
+  height: 438px;
+  width: 340px;
+}
+
+.product-card-desert {
+  margin: 0;
+  padding: 0;
+  height: 438px;
+  width: 340px;
+}
+
+.product-card-greenTree {
+  margin: 0;
+  padding: 0;
+  height: 438px;
+  width: 340px;
+}
 
