--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,6 +22,7 @@ body {
   margin: 0;
   display: flex;
   flex-direction: column;
+  flex-grow: 1;
   min-height: 100%;
   font-family: "PT Sans", "Arial", sans-serif;
   font-style: normal;
