--- a/styles/styles.css
+++ b/styles/styles.css
@@ -269,17 +269,18 @@ body {
   text-align: center;
 }
 
-.inner-header-title {
-  font-size: 20px;
-  line-height: 26px;
-  text-transform: uppercase;
+.inner-header {
+  margin: 0;
+  padding: 0;
+  color: #FFFFFF;
 }
 
 .inner-header-title {
   font-weight: 700;
   font-size: 60px;
   line-height: 78px;
-  color: #FFFFFF;
+  text-transform: uppercase;
+  margin-left: 70px;
 }
 
 .select-control {
