--- a/styles/styles.css
+++ b/styles/styles.css
@@ -440,10 +440,15 @@ body {
   margin-left: 72px;
 }
 
-.select-control {
+.filter-pagination {
+
+}
+
+.filter-pagination {
   margin: 0 auto;
   width: 141px;
-  margin-right: 114px;
+  margin-right: 282px;
+  margin-left: 270px;
 }
 
 .product-list {
@@ -477,7 +482,7 @@ body {
 
 .page-pagination {
   display: flex;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
 }
 
