--- a/styles/styles.css
+++ b/styles/styles.css
@@ -58,7 +58,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 0 auto;
+  padding: 0;
   margin: 0 auto;
 }
 
