--- a/styles/styles.css
+++ b/styles/styles.css
@@ -133,6 +133,14 @@ max-width: 400px;
   font-size: 24px;
 }
 
+.color-bloc {
+  background: rgba(131, 179, 211, 0.12);
+}
+
+.color-road {
+  background: rgba(131, 179, 211, 0.2);
+}
+
 .search {
   text-align: center;
 }
