--- a/styles/styles.css
+++ b/styles/styles.css
@@ -107,7 +107,9 @@ body {
 .navigation-list {
   width: 340px;
   margin: 0;
+  padding: 0;
   padding-right: 312px;
+  list-style-type: none;
 }
 
 .navigation-user {
