добавляет паддинги для второго экрана

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -77,20 +77,28 @@ body {
 .logo {
   display: block;
   margin: 0 auto;
+  padding: 0;
+  padding-bottom: 84px;
 }
 
 .main-title {
   font-weight: 700;
   font-size: 30px;
   line-height: 36px;
-  text-align: center;
   text-transform: uppercase;
+  text-align: center;
+  padding-top: 63px;
+  padding-bottom: 31px;
+  padding-right: 290px;
+  padding-left: 290px;
+  max-width: 620px;
 }
 
 .main-paragraph {
   font-size: 22px;
   line-height: 26px;
   text-align: center;
+  padding-bottom: 90px;
 }
 
 .navigation {
