--- a/styles/styles.css
+++ b/styles/styles.css
@@ -283,6 +283,7 @@ body {
 }
 
 .search {
+
   text-align: center;
 }
 
@@ -305,6 +306,7 @@ body {
   background-repeat: no-repeat;
   background-size: 100% auto;
   text-align: center;
+  padding: 94px 200px;
 }
 
 .appointment-title {
@@ -314,6 +316,7 @@ body {
   text-transform: uppercase;
   color: #FFFFFF;
   text-align: center;
+  margin-bottom: 29px;
 }
 
 .appointment-paragraph {
@@ -321,6 +324,7 @@ body {
   line-height: 26px;
   color: #FFFFFF;
   text-align: center;
+  margin-bottom: 46px;
 }
 
 .inner-header {
