задает сетку компонентов в блоке  поиск гостиницы

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -283,8 +283,12 @@ body {
 }
 
 .search {
-
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
   text-align: center;
+
 }
 
 .interest {
@@ -293,12 +297,25 @@ body {
   line-height: 36px;
   text-align: center;
   text-transform: uppercase;
+  padding-top: 91px;
+  padding-right: 451px;
+  padding-left: 452px;
+  margin-bottom: 29px;
 }
 
 .best {
   font-size: 22px;
   line-height: 26px;
   text-align: center;
+  padding-right: 304px;
+  padding-left: 304px;
+  margin-bottom: 56px;
+}
+
+.button-search {
+  padding-right: 313px;
+  padding-left: 313px;
+  margin-bottom: 93px;
 }
 
 .appointment {
