--- a/styles/styles.css
+++ b/styles/styles.css
@@ -444,6 +444,7 @@ body {
 
 .footer-social-list {
   display: flex;
+  flex-wrap: wrap;
   margin: 0 auto;
   padding: 0;
   list-style-type: none;
@@ -453,16 +454,25 @@ body {
 .footer-social-item {
   width: 22px;
   height: 17px;
+  padding-top: 58px;
+  margin-right: 27px;
+  margin-bottom: 27px;
+}
+
+.footer-social-item:nth-child(3n) {
+  margin-right: 0;
 }
 
 .footer-contact {
   width: 331px;
   margin-right: 236px;
+  padding-top: 58px;
 }
 
 .logo-html {
   margin-left: 72px;
   max-width: 115px;
+  padding-top: 58px;
 }
 
 .container-catalog {
