--- a/styles/styles.css
+++ b/styles/styles.css
@@ -408,8 +408,8 @@ body {
 }
 
 .appointment-catalog {
-  width: 1200px;
-  text-align: center;
+  width: 800px;
+  padding: 94px 200px;
 }
 
 .appointment-catalog-title {
@@ -418,12 +418,14 @@ body {
   line-height: 36px;
   text-transform: uppercase;
   text-align: center;
+  margin-bottom: 29px;
 }
 
 .appointment-catalog-paragraph {
   font-size: 22px;
   line-height: 26px;
   text-align: center;
+  margin-bottom: 46px;
 }
 
 .page-footer {
@@ -581,8 +583,4 @@ body {
   margin: 0;
   padding: 0;
   margin-right: 270px;
-}
-
-.appointment-сatalog {
-  text-align: center;
 }
