--- a/styles/styles.css
+++ b/styles/styles.css
@@ -358,6 +358,19 @@ body {
   margin-left: 70px;
 }
 
+.breadcrumbs {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.breadcrumbs-item{
+margin-right: 26px;
+margin-left: 70px;
+margin-bottom: 40px;
+}
+
 .select-control {
   border: 2px solid #E5E5E5;
   border-radius: 4px;
