--- a/styles/styles.css
+++ b/styles/styles.css
@@ -585,6 +585,7 @@ margin-bottom: 40px;
   display: flex;
   margin: 0;
   padding: 0;
+  list-style-type: none;
   justify-content: space-evenly;
   flex-wrap: wrap;
 }
