--- a/styles/styles.css
+++ b/styles/styles.css
@@ -51,7 +51,6 @@ body {
 
 .page-header {
   font-size: 20px;
-  line-height: 26px;
   text-transform: uppercase;
 }
 
@@ -75,8 +74,15 @@ body {
 
 .logo {
   display: block;
-  margin: 0 auto;
-  padding: 0;
+  position: relative;
+  z-index: 1;
+}
+
+.page-logo {
+  display: block;
+  margin-right: 47px;
+  width: 139px;
+  margin-bottom: -5px;
 }
 
 .main-title {
@@ -86,11 +92,9 @@ body {
   text-transform: uppercase;
   text-align: center;
   padding: 0;
-  margin: 0;
+  margin: 0 auto;
   padding-top: 63px;
   padding-bottom: 31px;
-  padding-right: 290px;
-  padding-left: 290px;
   max-width: 620px;
 }
 
@@ -105,28 +109,24 @@ body {
 
 .navigation {
   display: flex;
-  width: 1200px;
-  margin: 0 auto;
-}
-
-.page-logo {
-  width: 139px;
-  padding-right: 47px;
-  margin-left: 70px;
+  width: 1056px;
+  margin: auto;
 }
 
 .navigation-list {
   display: flex;
   flex-wrap: wrap;
-  width: 450px;
   margin: 0;
   padding: 0;
+  width: 450px;
   list-style-type: none;
 }
 
 .navigation-link {
   display: block;
-  padding: 20px 19px;
+  padding-top: 20px;
+  margin-right: 34px;
+  padding-bottom: 17px;
 }
 
 .navigation-user {
@@ -272,7 +272,7 @@ body {
   padding-left: 85px;
 }
 
-.color-bloc {
+.color-block {
   background: rgba(131, 179, 211, 0.12);
   min-width: 400px;
 }
@@ -365,10 +365,10 @@ body {
   list-style-type: none;
 }
 
-.breadcrumbs-item{
-margin-right: 26px;
-margin-left: 70px;
-margin-bottom: 40px;
+.breadcrumbs-item {
+  margin-right: 26px;
+  margin-left: 70px;
+  margin-bottom: 40px;
 }
 
 .select-control {
