--- a/styles/styles.css
+++ b/styles/styles.css
@@ -559,6 +559,25 @@ body {
   margin-bottom: 96px;
 }
 
+.wrapper {
+  margin: auto;
+}
+
+.inner-description {
+  display: grid;
+  grid-template-columns: 140px 140px;
+  column-gap: 20px;
+  row-gap: 16px;
+}
+
+.product-card {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 20px;
+  gap: 16px;
+}
+
 .page-pagination {
   display: flex;
   margin: 0;
