--- a/styles/styles.css
+++ b/styles/styles.css
@@ -404,7 +404,9 @@ body {
 
 .appointment-catalog {
   width: 800px;
-  padding: 94px 200px;
+  margin: 0 auto;
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 
 .appointment-catalog-title {
@@ -413,6 +415,7 @@ body {
   line-height: 36px;
   text-transform: uppercase;
   text-align: center;
+  margin: 0;
   margin-bottom: 29px;
 }
 
@@ -420,6 +423,7 @@ body {
   font-size: 22px;
   line-height: 26px;
   text-align: center;
+  margin: 0;
   margin-bottom: 46px;
 }
 
