убирает с main-index бекграунд

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -58,7 +58,7 @@ body {
   flex-grow: 1;
 }
 
-.main-index {
+.container-logo {
   background-image: url("../images/index-background.jpg");
   background-size: 100% auto;
   background-repeat: no-repeat;
@@ -145,8 +145,8 @@ body {
   display: block;
   margin: 0 auto;
   padding: 0;
-  margin-top: 51px;
-  margin-bottom: 82px;
+  margin-top: 52px;
+  margin-bottom: 83px;
 
 }
 .advantages-list {
