--- a/styles/styles.css
+++ b/styles/styles.css
@@ -89,8 +89,8 @@ body {
   padding: 0;
   margin: 0 auto;
   text-align: center;
-  padding-top: 63px;
-  padding-bottom: 90px;
+  margin-top: 63px;
+  margin-bottom: 90px;
 }
 
 .main-title {
@@ -162,7 +162,6 @@ body {
   list-style-type: none;
 }
 
-
 .container-advantages {
   display: flex;
   flex-direction: column;
@@ -208,7 +207,6 @@ body {
   margin: 0;
   width: 800px;
 }
-
 
 .advantages-item-title {
   font-weight: 700;
