--- a/styles/styles.css
+++ b/styles/styles.css
@@ -417,6 +417,7 @@ body {
 }
 
 .button-detailed {
+  display: inline-block;
   padding: 9px 15px;
   background: #756157;
   border-radius: 4px;
@@ -431,6 +432,7 @@ body {
 }
 
 .button-favourites {
+  display: inline-block;
   padding: 9px 15px;
   background: #82B3D3;
   border-radius: 4px;
@@ -446,6 +448,17 @@ body {
 
 .button-favourites-current {
   background: #7DB54F;
+}
+
+.rating {
+  display: inline-block;
+  padding: 9px 22px;
+  background: #F2F2F2;
+  border-radius: 4px;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 .appointment-catalog {
