--- a/styles/styles.css
+++ b/styles/styles.css
@@ -113,7 +113,7 @@ body {
 .navigation {
   display: flex;
   width: 1056px;
-  margin: auto;
+  margin: 0 auto;
 }
 
 .navigation-list {
@@ -126,19 +126,19 @@ body {
   list-style-type: none;
 }
 
+.navigation-list .navigation-item:nth-child(3) .navigation-link {
+  margin-right: 0;
+}
+
 .navigation-link {
   display: block;
+  margin-right: 34px;
   padding-top: 20px;
   padding-bottom: 17px;
-  margin-right: 34px;
   font-weight: 700;
   font-size: 20px;
   line-height: 26px;
   text-decoration: none;
-}
-
-.navigation-link:nth-child(3) {
-  margin-right: 0;
 }
 
 .navigation-user {
@@ -163,6 +163,26 @@ body {
   border: none;
   text-decoration: none;
   cursor: pointer;
+}
+
+.navigation-user .navigation-item:nth-child(1) .navigation-link{
+  background-image: url('../images/search-icons.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.navigation-user .navigation-item:nth-child(2) .navigation-link{
+  background-image: url('../images/favorite2.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  padding-left: 18px;
+}
+
+.navigation-user .navigation-link {
+  min-width: 20px;
+  min-height: 22px;
+  outline: 5px solid #ff6347;
+  outline-offset: -5px;
 }
 
 .logo-welcome {
