--- a/styles/styles.css
+++ b/styles/styles.css
@@ -131,6 +131,7 @@ body {
 }
 
 .navigation-link {
+  position: relative;
   display: block;
   margin-right: 34px;
   padding-top: 20px;
@@ -139,6 +140,33 @@ body {
   font-size: 20px;
   line-height: 26px;
   text-decoration: none;
+}
+
+.navigation-user .navigation-item:nth-child(1) .navigation-link {
+  margin: 0;
+  padding: 24px 12px;
+}
+
+.navigation-user .navigation-item:nth-child(2) .navigation-link {
+  margin: 0;
+  margin-right: 19px;
+  padding: 24px 12px;
+}
+
+.favorite-numbe {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  left: 24px;
+  top: 15px;
+  font-size: 10px;
+  line-height: 13px;
+  color: #FFFFFF;
+  background: #7DB54F;
+  border-radius: 10px;
+  text-align: center;
+  
+  letter-spacing: -0.1em;
 }
 
 .navigation-user {
@@ -163,26 +191,6 @@ body {
   border: none;
   text-decoration: none;
   cursor: pointer;
-}
-
-.navigation-user .navigation-item:nth-child(1) .navigation-link{
-  background-image: url('../images/search-icons.svg');
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-.navigation-user .navigation-item:nth-child(2) .navigation-link{
-  background-image: url('../images/favourites.svg');
-  background-repeat: no-repeat;
-  background-position: center;
-  padding-left: 18px;
-}
-
-.navigation-user .navigation-link {
-  min-width: 20px;
-  min-height: 22px;
-  outline: 5px solid #ff6347;
-  outline-offset: -5px;
 }
 
 .logo-welcome {
